updated overflow issues fix

--- a/src/sections/About/About.module.css
+++ b/src/sections/About/About.module.css
@@ -4,8 +4,8 @@
 }
 
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
+    max-width: 1003px;
+  /* margin: 0 auto; */
   padding: 0 var(--space-16);
 }
 
