--- a/src/sections/Contact/Contact.module.css
+++ b/src/sections/Contact/Contact.module.css
@@ -16,8 +16,8 @@
 }
 
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
+    max-width: 1003px;
+  /* margin: 0 auto; */
   padding: 0 var(--space-16);
   position: relative;
   z-index: 1;
